WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308047
[YARR] Fix tryConsumeBackReference pos corruption with surrogate pairs in interpreter
https://bugs.webkit.org/show_bug.cgi?id=308047
Summary
[YARR] Fix tryConsumeBackReference pos corruption with surrogate pairs in int...
Sosuke Suzuki
Reported
2026-02-17 04:44:37 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2026-02-17 04:45:29 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58849
EWS
Comment 2
2026-02-18 15:47:26 PST
Committed
307792@main
(f458b13465b1): <
https://commits.webkit.org/307792@main
> Reviewed commits have been landed. Closing PR #58849 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug